--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/fav-icon_OD.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
-    <title>DigitalsOrigin</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <title>OriginsDigital</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
