--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <title>OriginsDigital</title>
+    <script
+      src="https://upload-widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
   </head>
 
   <body>
