responsive par ci par là

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/fav-icon_OD.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta property="og:title" content="Origins Digital" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:type" content="video" />
+    <meta property="og:description" content="Origins Digital" /> -->
+
     <link rel="stylesheet" href="./index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
